# zenzstd

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.crates.md  README.md
.github/workflows/: ci.yml  fuzz.yml
benches/: compress_all.rs  compress_compare.rs  decode_all.rs
benchmarks/: README.md
examples/: bench_decode.rs  bench_l1.rs  compare.rs  decode_mixed.rs
fuzz/: Cargo.toml  zstd.dict
fuzz/fuzz_targets/: fuzz_decode.rs  fuzz_dict_roundtrip.rs  fuzz_fse.rs  fuzz_huff0.rs  fuzz_roundtrip.rs  fuzz_streaming_roundtrip.rs
fuzz/regression/: dict_roundtrip_l15_issue5
src/: lib.rs  stream.rs  xxhash64.rs
src/bit_io/: bit_reader_reverse.rs  bit_writer.rs
src/decoding/: block_decoder.rs  decode_buffer.rs  dictionary.rs  errors.rs  flat_buffer.rs  frame_decoder.rs  literals_section_decoder.rs  mod.rs  ringbuffer.rs  scratch.rs  sequence_execution.rs  sequence_section_decoder.rs  streaming_decoder.rs  unsafe_ops.rs
src/dictionary/: mod.rs
src/encoding/: block_splitter.rs  compress_params.rs  frame_compressor.rs  frame_header.rs  hash.rs  match_state.rs  mod.rs  simd.rs  streaming_encoder.rs  zstd_fast.rs  zstd_lazy.rs  zstd_match.rs  zstd_opt.rs
src/encoding/blocks/: compressed.rs
src/encoding/levels/: mod.rs  zstd_levels.rs
src/fse/: fse_decoder.rs  fse_encoder.rs
src/huff0/: huff0_decoder.rs  huff0_encoder.rs
src/tests/: conformance.rs  dict_test.rs  fuzz_regressions.rs  level_roundtrip.rs  mod.rs
tests/: fuzz_regression.rs
