[package]
name = "zenzstd"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Pure Rust Zstandard (zstd) compression and decompression — forbid(unsafe_code), no_std+alloc"
repository = "https://github.com/imazen/zenzstd"
keywords = ["zstd", "zstandard", "compression", "decompression", "no_std"]
categories = ["compression", "no-std"]
readme = "README.md"
exclude = [
    "vendor/",
    "decodecorpus_files/",
    "fuzz/",
    "dict_tests/",
    "benchmarks/",
    ".github/",
    "perf.data",
    "perf.data.old",
    "flamegraph.svg",
    "CLAUDE.md",
]

[features]
default = ["hash", "std"]
std = []
hash = []
dict_builder = ["std", "dep:fastrand"]
fuzz_exports = []
simd = ["dep:archmage", "dep:magetypes"]

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("avx512"))'] }

[dependencies]
fastrand = { version = "2.3.0", optional = true }
archmage = { version = "0.9.15", optional = true }
magetypes = { version = "0.9.15", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = { version = "0.9.0", features = ["small_rng"] }
zstd = { version = "0.13.3", features = ["zdict_builder"] }
zenbench = "0.1.2"

[[bench]]
name = "decode_all"
path = "benches/decode_all.rs"
harness = false

[[bench]]
name = "compress_compare"
path = "benches/compress_compare.rs"
harness = false
