[package]
name = "zenzstd"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
description = "Pure Rust Zstandard (zstd) compression and decompression — forbid(unsafe_code), no_std+alloc"
repository = "https://github.com/imazen/zenzstd"
keywords = ["zstd", "zstandard", "compression", "decompression", "no_std"]
categories = ["compression", "no-std"]
readme = "README.md"
exclude = [
    "vendor/",
    "decodecorpus_files/",
    "fuzz/",
    "dict_tests/",
    "benchmarks/",
    ".github/",
    "perf.data",
    "perf.data.old",
    "flamegraph.svg",
    "CLAUDE.md",
]

[features]
default = ["hash", "std", "simd"]
std = []
hash = []
dict_builder = ["std", "dep:fastrand"]
fuzz_exports = []
simd = ["dep:archmage", "dep:magetypes"]
# Unsafe optimizations — opt-in only. These use unchecked indexing and raw
# pointer copies in hot paths to eliminate bounds checks. All unsafe code is
# isolated in `unsafe_ops` modules with safety invariants documented.
unsafe-decompress = []
unsafe-compress = []

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(feature, values("avx512", "unsafe-decompress", "unsafe-compress"))'] }

[lints.clippy]
too_many_arguments = "allow"
collapsible_if = "allow"

[dependencies]
fastrand = { version = "2.3.0", optional = true }
archmage = { version = "0.9.15", optional = true }
magetypes = { version = "0.9.15", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }
rand = { version = "0.9.0", features = ["small_rng"] }
zstd = { version = "0.13.3", features = ["zdict_builder"] }
ruzstd = "0.8.2"
zenbench = "0.1.2"

[[bench]]
name = "decode_all"
path = "benches/decode_all.rs"
harness = false

[[bench]]
name = "compress_compare"
path = "benches/compress_compare.rs"
harness = false
