[package]
name = "zenzstd-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4.12"
zenzstd = { path = "..", features = ["hash", "std", "dict_builder", "fuzz_exports"] }
arbitrary = { version = "1.4.2", features = ["derive"] }

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "fuzz_decode"
path = "fuzz_targets/fuzz_decode.rs"
doc = false

[[bin]]
name = "fuzz_roundtrip"
path = "fuzz_targets/fuzz_roundtrip.rs"
doc = false

[[bin]]
name = "fuzz_streaming_roundtrip"
path = "fuzz_targets/fuzz_streaming_roundtrip.rs"
doc = false

[[bin]]
name = "fuzz_dict_roundtrip"
path = "fuzz_targets/fuzz_dict_roundtrip.rs"
doc = false

[[bin]]
name = "fuzz_huff0"
path = "fuzz_targets/fuzz_huff0.rs"
doc = false

[[bin]]
name = "fuzz_fse"
path = "fuzz_targets/fuzz_fse.rs"
doc = false
